# arc-dev

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
packaging/: README.md
packaging/scoop/: arc-dev.json
scripts/: install.sh  publish-all.sh  update-package-managers.sh  update_package_managers.py
src/: cli.rs  config.rs  create.rs  install.rs  main.rs  package_manager.rs  project.rs  rpc.rs
tests/: cli.rs
