[package]
name = "arc-dev"
version = "0.1.0"
edition = "2024"
description = "Command-line tools for Arc network development"
license = "MIT"
readme = "README.md"
homepage = "https://arc.io"
repository = "https://github.com/veliuysal/arc-dev"
documentation = "https://github.com/veliuysal/arc-dev#readme"
keywords = ["arc", "blockchain", "cli", "ethereum", "foundry"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/.github", "/packaging", "/scripts"]

[[bin]]
name = "arc-dev"
path = "src/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/arc-dev-{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"

[dev-dependencies]
tempfile = "3"

